force-app/main/default/objects/OpportunityProductApproval__c/OpportunityProductApproval__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Approval</label>
    <nameField>
        <label>Opportunity Product Approval</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>