force-app/main/default/objects/OpportunityProductApproval__c/fields/KDO__c.field-meta.xml
<CustomField>
    <fullName>KDO__c</fullName>
    <label>KDO</label>
    <type>Date</type>
</CustomField>