force-app/main/default/objects/OpportunityProductApproval__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product Approvals</relationshipLabel>
    <relationshipName>Opportunity_Product_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>