force-app/main/default/objects/OpportunityProductApproval__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Opportunity Product Approvals</relationshipLabel>
    <relationshipName>Opportunity_Product_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>