force-app/main/default/objects/OpportunityProductApproval__c/fields/ProductionStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProductionStartDate__c</fullName>
    <label>Production Start Date</label>
    <type>Date</type>
</CustomField>